<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".details.DetailsFragment">

    <data>

        <variable
            name="character"
            type="com.grandefirano.rickandmortycharacterfinder.data.Character" />
    </data>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">


        <ImageView
            android:id="@+id/photoDetailsImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            app:profilePhoto="@{character}"
            app:layout_constraintEnd_toEndOf="@id/guidelineVertical"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/sym_def_app_icon"
            android:contentDescription="@string/photo" />

        <TextView
            android:id="@+id/portalTextView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/more"
            android:textSize="70sp"
            android:textColor="#fff"
            android:shadowColor="@color/colorBackground"
            android:shadowRadius="10"
            android:visibility="gone"
            android:textAlignment="center"
            android:gravity="center"
            android:fontFamily="@font/get_schwifty"
            app:layout_constraintStart_toStartOf="@id/portalImageView"
            app:layout_constraintEnd_toEndOf="@id/portalImageView"
            app:layout_constraintTop_toTopOf="@id/portalImageView"
            app:layout_constraintBottom_toBottomOf="@id/portalImageView"/>

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorBackground"
            android:fontFamily="sans-serif-condensed-medium"
            android:padding="10dp"

            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowColor="@color/colorNameShadow"
            android:shadowRadius="1"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@{character.name}"
            android:textColor="@color/colorText"


            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/photoDetailsImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/guidelineVertical"
            app:layout_constraintTop_toTopOf="@+id/photoDetailsImageView"
            tools:text="Rick Sanchez" />

        <ImageView
            android:id="@+id/genderImageView"
            genderIcon="@{character}"
            android:layout_width="90dp"
            android:layout_height="90dp"

            android:src="@drawable/ic_question"
            app:layout_constraintBottom_toTopOf="@+id/statusImageView"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoDetailsImageView"
            android:contentDescription="@string/gender" />
        <TextView
            android:id="@+id/genderTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:text="@string/gender_title"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toEndOf="@+id/guidelineVertical"

            app:layout_constraintTop_toTopOf="@+id/genderImageView" />

        <TextView
            android:id="@+id/genderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:text="@{character.gender}"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSizeDetails"
            app:layout_constraintBottom_toBottomOf="@+id/genderImageView"
            app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
            app:layout_constraintTop_toBottomOf="@+id/genderTitleTextView" />

        <ImageView
            android:id="@+id/statusImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            android:src="@drawable/ic_heart"
            app:layout_constraintBottom_toTopOf="@+id/bornPlaceImageView"
            app:layout_constraintTop_toBottomOf="@+id/genderImageView"
            app:statusIcon="@{character}"
            android:contentDescription="@string/status" />

        <TextView
            android:id="@+id/statusTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:text="@string/status_title"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
            app:layout_constraintTop_toTopOf="@+id/statusImageView" />

        <TextView
            android:id="@+id/statusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:text="@{character.status}"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSizeDetails"

            app:layout_constraintBottom_toBottomOf="@+id/statusImageView"
            app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
            app:layout_constraintTop_toBottomOf="@+id/statusTitleTextView" />


        <ImageView
            android:id="@+id/bornPlaceImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_bird_stork"
            app:layout_constraintBottom_toTopOf="@+id/presentPlaceImageView"
            app:layout_constraintTop_toBottomOf="@+id/statusImageView"
            android:contentDescription="@string/origin" />

        <TextView
            android:id="@+id/bornPlaceTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:text="@string/origin_location"
            android:textColor="@color/colorText"
            app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
            app:layout_constraintTop_toTopOf="@+id/bornPlaceImageView" />


        <TextView
            android:id="@+id/bornPlaceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:text="@{character.originLocation}"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSizeDetails"

            app:layout_constraintBottom_toBottomOf="@+id/bornPlaceImageView"
            app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
            app:layout_constraintTop_toBottomOf="@+id/bornPlaceTitleTextView" />


        <ImageView
            android:id="@+id/presentPlaceImageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintEnd_toStartOf="@+id/guidelineVertical"
            android:src="@drawable/ic_location"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bornPlaceImageView"
            android:contentDescription="@string/present_place" />

        <TextView
            android:id="@+id/presentPlaceTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:text="@string/present_place_title"

            android:textColor="@color/colorText"
            app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
            app:layout_constraintTop_toTopOf="@+id/presentPlaceImageView" />


        <TextView
            android:id="@+id/presentPlaceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/marginMedium"
            android:text="@{character.presentLocation}"
            android:textColor="@color/colorText"
            android:textSize="@dimen/textSizeDetails"

            app:layout_constraintBottom_toBottomOf="@+id/presentPlaceImageView"
            app:layout_constraintStart_toEndOf="@+id/guidelineVertical"
            app:layout_constraintTop_toBottomOf="@+id/presentPlaceTitleTextView" />

        <ImageView
            android:id="@+id/portalImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/portal_image"
            android:contentDescription="@string/portal" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.33" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
