<resources>
    <string name="app_name">Character Finder</string>
    <string name="retry">Retry</string>
    <string name="photo">photo</string>
    <string name="more">MORE</string>
    <string name="more_info">MORE INFO</string>
    <string name="gender">gender</string>
    <string name="gender_title">Gender</string>
    <string name="status">status</string>
    <string name="status_title">Alive or not?</string>
    <string name="origin">born</string>
    <string name="origin_location">Origin Location</string>
    <string name="present_place">presentPlace</string>
    <string name="present_place_title">Present Location</string>
    <string name="portal">portal</string>
    <string name="character_image">characterImage</string>
    <string name="world_wide_web">World Wide Web</string>


    <string-array name="gender_list_name">
        <item>- Any gender -</item>
        <item>Men</item>
        <item>Women</item>
        <item>Genderless</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="gender_list_value">
        <item>ALL</item>
        <item>MALE</item>
        <item>FEMALE</item>
        <item>GENDERLESS</item>
        <item>UNKNOWN</item>
    </string-array>

    <string-array name="status_list_name">
        <item>- Any status -</item>
        <item>Alive</item>
        <item>Dead</item>
        <item>Unknown</item>
    </string-array>
    <string-array name="status_list_value">
        <item>ALL</item>
        <item>ALIVE</item>
        <item>DEAD</item>
        <item>UNKNOWN</item>
    </string-array>
</resources>