...
                android:backgroundTint="@color/colorText"
                android:popupBackground="@color/colorSpinnerDropdown"
                android:layout_weight="1" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/characterList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
...
